--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
         // ============ CONFIG SECTION - แก้ไขตรงนี้ ============
         const CONFIG = {
             SHEETS_URL: 'https://docs.google.com/spreadsheets/d/1-5j1UN3xuTJB1be1IdAjPRvMA90yngtlQ-ylSiv2rEY/export?format=csv&gid=332563834',
-            WEBHOOK_URL: 'YOUR_WEBHOOK_URL_HERE'
+            WEBHOOK_URL: 'https://n8n-p2sw2ng.p2scalw2ng.xyz/webhook/ProOutput'
         };
         // ====================================================
 
