--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
               }
               const v = (inp.value || '').trim();
               opt.value = v;
-              opt.textContent = v || '— กรอกเอง —';
+              opt.textContent = v || '—  —';
               sel.value = v; // ให้โค้ดเดิมอ่านค่าได้จาก #productModel
             }
 
