--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
     // ============ CONFIG SECTION ============
     const CONFIG = {
       SHEETS_URL: 'https://docs.google.com/spreadsheets/d/1-5j1UN3xuTJB1be1IdAjPRvMA90yngtlQ-ylSiv2rEY/export?format=csv&gid=332563834',
-      WEBHOOK_URL: 'https://n8n-p2sw2ng.p2scalw2ng.xyz/webhook/Productissuereport'
+      WEBHOOK_URL: 'https://n8n-p2sw2ng.p2scalw2ng.xyz/webhook/ProOutput'
     };
     // ========================================
 
